# VisionSystemForAnAutonomousRailwayMaintenanceVehicle

./: .gitignore  LICENSE  README.md
Dependencies/darknet/include/: README.md
Localization/: localization.txt
ROS Sources/: ROSCommands.txt
ROS Sources/gps/: CMakeLists.txt  package.xml
ROS Sources/gps/msg/: gps_message.msg
ROS Sources/gps/src/: gps_node.py
ROS Sources/localization/: CMakeLists.txt  package.xml
ROS Sources/localization/msg/: gps_message.msg
ROS Sources/localization/src/: localization_node.cpp
ROS Sources/vision/: CMakeLists.txt  package.xml
ROS Sources/vision/launch/: vision.launch  visionShow.launch  vision_gps_localization.launch
ROS Sources/vision/msg/: vision_input_message.msg  vision_message.msg  vision_object.msg
ROS Sources/vision/src/: camera_node.cpp  vision_node.cpp
VisionSystem/: CMakeLists.txt  Parameters.txt
VisionSystem/classification-networks/: distant_road_crossing_signal_pytorch_model.onnx  distant_signal_pytorch_model.onnx  main_signal_pytorch_model.onnx  road_crossing_signal_pytorch_model.onnx  speed_sign_pytorch_model.onnx  used_classes_distant_signal_pytorch.names  used_classes_main_signal_pytorch.names  used_classes_road_crossing_signal_pytorch.names  used_classes_speed_sign_pytorch.names
VisionSystem/src/: DrawLocalizationMap.cpp  ExplainYOLOImageGenerator.cpp  GlobalEnumerationConstants.h  GlobalInformation.h  LoadParameters.cpp  LoadParameters.h  ObjectDetection.cpp  ObjectDetection.h  RunTrackDetection.cpp  RunVisionSystem.cpp  SharedParameters.h  TrackDetection.cpp  TrackDetection.h  VisionSystem.cpp  VisionSystem.h  YOLO-TensorRT.cpp  YOLO-TensorRT.h
VisionSystem/yolo-network/: obj.names  yolov4-tiny.cfg
VisionSystem/yolo-plugin/: README.md
